<resources>
    <string name="app_name">Smart Home App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_voice">Voice Control</string>
    <string name="menu_manual">Manual Control</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_name">House name</string>
    <string name="title_activity_manual">manual</string>
    <string name="title_activity_setname">setname</string>
    <string name="setname">Save Changes</string>
    <string name="title_activity_bedroom">bedroom</string>
    <string-array name="features2">
        <item>Bedroom</item>
        <item>Kitchen</item>
        <item>Bathroom</item>
        <item>Living Room</item>
        <item>Laundry Room</item>
        <item>Study Room</item>
    </string-array>
    <string name="title_activity_bathroom">Bathroom</string>
    <string name="title_activity_kitchen">Kitchen</string>
    <string name="title_activity_livingroom">Living Room</string>
    <string name="title_activity_laundryroom">Laundry Room</string>
    <string name="title_activity_livingroom2">Living Room</string>
    <string name="title_activity_studyroom">Study Room</string>
    <string name="title_activity_monitor">monitor</string>
    <string name="title_activity_bedroom2">bedroom2</string>
    <string name="title_activity_kitchen2">kitchen2</string>
    <string name="title_activity_bathroom2">bathroom2</string>
    <string name="title_activity_laundryroom2">laundryroom2</string>
    <string name="title_activity_studyroom2">studyroom2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
