<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_voice"
            android:title="@string/menu_voice" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_manual"
            android:title="@string/menu_manual" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_monitor"
            android:title="@string/menu_monitor" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_theme"
                android:title="@string/menu_theme" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_set"
                android:title="@string/menu_name" />

        </menu>
    </item>

</menu>
