<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationtest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationtest.ui.voice.GalleryFragment"
        android:label="@string/menu_voice"
        tools:layout="@layout/fragment_voice" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationtest.ui.manual.SlideshowFragment"
        android:label="@string/menu_manual"
        tools:layout="@layout/fragment_setname" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.navigationtest.ui.monitor.ToolsFragment"
        android:label="@string/menu_monitor"
        tools:layout="@layout/fragment_monitor" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navigationtest.ui.theme.ShareFragment"
        android:label="@string/menu_theme"
        tools:layout="@layout/fragment_theme" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.navigationtest.ui.setname.SendFragment"
        android:label="@string/menu_name"
        tools:layout="@layout/fragment_manual" />
</navigation>